--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
 		<div class="content">
 			<div class="product">
 				<div class="product__image">
-					<img src="images/img/Nike-SB-Stefan-Janoski-Max.png" alt="Nike-SB-Stefan-Janoski-Max" class="product__image-img">
+					<img id="slider-image-1" class="product__image-img" src="images/img/Nike-SB-Stefan-Janoski-Max.png" alt="Nike-SB-Stefan-Janoski-Max">
+					<img id="slider-image-2" class="product__image-img" src="images/img/gray.png" alt="Nike gray">
+					<img id="slider-image-3" class="product__image-img" src="images/img/red.png" alt="Nike red">
+					<img id="slider-image-4" class="product__image-img" src="images/img/blue.png" alt="Nike blue">
+
+
 				</div>
-				<ul class="product__list">
-					<li class="product__list-items"></li>
-					<li class="product__list-items"></li>
-					<li class="product__list-items"></li>
-					<li class="product__list-items"></li>
-				</ul>
+				<div class="product__list">
+					<a href="#slider-image-1" class="product__list-items"></a>
+					<a href="#slider-image-2" class="product__list-items"></a>
+					<a href="#slider-image-3" class="product__list-items"></a>
+					<a href="#slider-image-4" class="product__list-items"></a>
+				</div>
 				</div>
 
 			<div class="description">
@@ -52,9 +57,9 @@
 			        <label aria-label="5 stars" class="rating__label" for="rating-5"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
 			        <input class="rating__input" name="rating" id="rating-5" value="5" type="radio">
 			    </div>
-					<div class="item__buttons">
+					<div class="button__wraper">
 							<button class="item__button item__button--size"><a href="#" class="item__button--text">Size <i class="fas fa-angle-down"></i></p></a></button>
-							<button class="item__button item__button--qty"><a href="#" class="item__button--text">Qtya <i class="fas fa-angle-down"></i></p></a></button>
+							<button class="item__button item__button--qty"><a href="#" class="item__button--text">Qty <i class="fas fa-angle-down"></i></p></a></button>
 					</div>
 					<div class="item__cart">
 							<button class="item__button button__cart"><a href="#" class="item__button--text">Add to cart</a></button>
